--- a/Autolabor/navigation/path_rviz_plugin/CMakeLists.txt
+++ b/Autolabor/navigation/path_rviz_plugin/CMakeLists.txt
@@ -44,3 +44,30 @@ add_definitions(-DQT_NO_KEYWORDS)
 add_library(path_rviz_plugin src/path_rviz_plugin.cpp include/path_rviz_plugin/path_rviz_plugin.h)
 add_dependencies(path_rviz_plugin ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(path_rviz_plugin ${QT_LIBRARIES} ${catkin_LIBRARIES})
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+install(PROGRAMS plugin_description.xml
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+## Mark executables and/or libraries for installation
+install(TARGETS path_rviz_plugin
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+## Mark cpp header files for installation
+# install(DIRECTORY include/${PROJECT_NAME}/
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#   FILES_MATCHING PATTERN "*.h"
+#   PATTERN ".svn" EXCLUDE
+# )
