--- a/Autolabor/simulation/autolabor_description/CMakeLists.txt
+++ b/Autolabor/simulation/autolabor_description/CMakeLists.txt
@@ -178,6 +178,10 @@ include_directories(
 #   PATTERN ".svn" EXCLUDE
 # )
 
+install(DIRECTORY launch urdf meshes rviz
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
 #   # myfile1
